--- a/package.json
+++ b/package.json
@@ -1,38 +1,39 @@
 {
-  "name": "nocli",
-  "version": "1.0.0",
+  "author": "",
   "description": "",
-  "main": "index.js",
+  "name": "myAngularApp",
+  "version": "1.0.0",
+  "repository": {
+    "type": "git",
+    "url": ""
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
     "start": "node server.js"
   },
   "engines": {
     "node": ">=6.0.0"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
-    "@angular/compiler-cli": "^7.2.12",
-    "@ngtools/webpack": "^7.3.8",
-    "copy-webpack-plugin": "^5.0.2",
-    "html-webpack-plugin": "^3.2.0",
-    "script-ext-html-webpack-plugin": "^2.1.3",
-    "typescript": "3.1.6",
-    "webpack": "^4.29.6",
-    "webpack-cli": "^3.3.0"
+    "@angular/compiler-cli": "^5.2.4",
+    "@ngtools/webpack": "^1.9.8",
+    "copy-webpack-plugin": "^4.3.1",
+    "html-webpack-plugin": "^2.30.1",
+    "raw-loader": "^0.5.1",
+    "script-ext-html-webpack-plugin": "^1.8.8",
+    "typescript": "^2.7.1",
+    "webpack": "^3.10.0"
   },
   "dependencies": {
-    "@angular/common": "^7.2.12",
-    "@angular/compiler": "^7.2.12",
-    "@angular/core": "^7.2.12",
-    "@angular/platform-browser": "^7.2.12",
-    "@angular/platform-browser-dynamic": "^7.2.12",
-    "ejs": "^2.6.1",
-    "express": "^4.16.4",
-    "rxjs": "^6.4.0",
-    "zone.js": "^0.9.0"
+    "@angular/common": "^5.2.4",
+    "@angular/compiler": "^5.2.4",
+    "@angular/core": "^5.2.4",
+    "@angular/platform-browser": "^5.2.4",
+    "@angular/platform-browser-dynamic": "^5.2.4",
+    "ejs": "^2.5.7",
+    "express": "^4.16.2",
+    "rxjs": "^5.5.6",
+    "zone.js": "^0.8.20"
   }
 }
